k8s2/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  labels:
    app: account-service
    spring-boot: "true"
spec:
  ports:
    - port: 47001
      protocol: TCP
  selector:
    app: account-service
  type: ClusterIP
